savvy-macro/src/snapshots/savvy_macro__tests__assert_snapshot_outer_impl-3.snap
---
source: savvy-macro/src/lib.rs
expression: lines
---
- "#[allow(clippy::missing_safety_doc)]"
- "#[no_mangle]"
- "pub unsafe extern \"C\" fn Person_name(self__: savvy::ffi::SEXP) -> savvy::ffi::SEXP {"
- "    match savvy_Person_name_inner(self__) {"
- "        Ok(result) => result.0,"
- "        Err(e) => savvy::handle_error(e),"
- "    }"
- "}"
